logs/worker.log
Usage: celery [OPTIONS] COMMAND [ARGS]...
Try 'celery --help' for help.

Error: 
Unable to load celery application.
While trying to load the module app.worker.celery_app the following error occurred:
Traceback (most recent call last):
  File "/home/dongao/docbridge-hq/venv/lib/python3.12/site-packages/celery/bin/celery.py", line 137, in celery
    app = find_app(app)
          ^^^^^^^^^^^^^
  File "/home/dongao/docbridge-hq/venv/lib/python3.12/site-packages/celery/app/utils.py", line 383, in find_app
    sym = symbol_by_name(app, imp=imp)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/dongao/docbridge-hq/venv/lib/python3.12/site-packages/kombu/utils/imports.py", line 59, in symbol_by_name
    module = imp(module_name, package=package, **kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/dongao/docbridge-hq/venv/lib/python3.12/site-packages/celery/utils/imports.py", line 105, in import_from_cwd
    return imp(module, package=package)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/dongao/docbridge-hq/app/worker.py", line 6, in <module>
    from .ai_core import build_summary_chain, build_risk_chain, get_embeddings
  File "/home/dongao/docbridge-hq/app/ai_core.py", line 40
    余观察到汝之劳工在向量化失败时只是 `print`。为了防止统帅在前端看到“认知完成”却无法聊天，建议将 `analyze_document_task` 末尾改为：
                             ^
SyntaxError: invalid character '。' (U+3002)

